# scenarium-egui

./: AGENTS.md  Cargo.toml  NOTES-AI.md  README.md
assets/: scenarium-egui.desktop
src/: init.rs  main.rs  model.rs
src/gui/: graph.rs  mod.rs  node.rs  render.rs  style.rs
